test_suite/tests/ui/enum-representation/untagged-struct.stderr
error: #[serde(untagged)] can only be used on enums
 --> tests/ui/enum-representation/untagged-struct.rs:4:9
  |
4 | #[serde(untagged)]
  |         ^^^^^^^^
