test_suite/tests/ui/enum-representation/untagged-struct.rs
use serde_derive::Serialize;

#[derive(Serialize)]
#[serde(untagged)]
struct S;

fn main() {}
